[package]
name = "rust_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.5.2"}
tokio = { version = "1.25.0" , features = ["full"] }

#[profile.release]
#opt-level = 3
#debug = false
#lto = true
